Update 3. Commands for the NMap.md

--- a/3. Commands for the NMap.md
+++ b/3. Commands for the NMap.md
@@ -1,4 +1,4 @@
-# Commands for the NMap for the beginners:
+<img width="1141" height="868" alt="image" src="https://github.com/user-attachments/assets/15f5d00b-18bb-49ee-a643-248e8987f7ec" /># Commands for the NMap for the beginners:
 
 #### To find the ip add 
 
@@ -37,5 +37,31 @@ So don`t use this command.
 <img width="1140" height="868" alt="Screenshot 2026-01-06 193756" src="https://github.com/user-attachments/assets/29bde180-1bfd-47a2-9152-4dfcf0d1a7d2" />
 
 <img width="1145" height="871" alt="Screenshot 2026-01-06 193843" src="https://github.com/user-attachments/assets/03583da8-8cdb-4f80-bc1d-cc48fe0f669c" />
+
+> If you scane all tcp in port 21 ( FTP ) open in the target host.
+` sudo nmap -sT -p21 < IP add >` 
+
+<img width="1141" height="868" alt="image" src="https://github.com/user-attachments/assets/9b210115-d245-49f9-912f-bcf0663bb53e" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
