Update 4. TCP Headers.md

--- a/4. TCP Headers.md
+++ b/4. TCP Headers.md
@@ -40,3 +40,37 @@ Analogy: Think of TCP headers as a control panel of light switches on a shipping
 > * RST is the "Emergency Stop" switch you hit if the warehouse is on fire or the door is locked.
 > * PSH is the "Priority" switch used for packages that need to be opened the second they arrive.
 > * FIN is the "Final Shipment" switch you flip when you are done sending boxes for the day.
+
+# A TCP three-way handshake
+
+A TCP three-way handshake is the standard process used to establish a reliable socket connection between a client and a server, such as a web browser and a web server.
+
+This process ensures that both devices are ready to transmit data and that the communication channel is clear.
+
+The handshake consists of the following three steps:
+
+## • Step 1: SYN (Synchronize) – 
+
+The process begins when the client sends a TCP SYN packet to the server.
+
+This packet acts as a request to establish a connection and contains a random sequence number used to initiate communication.
+
+The objective is to ask the server if it is open for a new connection.
+
+## • Step 2: SYN-ACK (Synchronize-Acknowledgment) – 
+
+If the server’s port is open and able to accept the connection, it receives the SYN packet and responds with a SYN-ACK packet.
+
+This packet serves as a confirmation receipt, acknowledging the client's sequence number and sending the server's own sequence number back to the client.
+
+## • Step 3: ACK (Acknowledgment) – 
+
+Once the client receives the SYN-ACK, it sends a final ACK packet back to the server. This signal indicates that the server's response was received successfully.
+
+Once these three steps are complete, the TCP connection is established, and the devices can begin the reliable exchange of data.
+
+If the server sends an RST (Reset) packet instead of a SYN-ACK, it indicates that the targeted port is closed and no connection can be made.
+
+
+
+
