Update 3. Commands for the NMap.md

--- a/3. Commands for the NMap.md
+++ b/3. Commands for the NMap.md
@@ -1,4 +1,5 @@
-<img width="1141" height="868" alt="image" src="https://github.com/user-attachments/assets/15f5d00b-18bb-49ee-a643-248e8987f7ec" /># Commands for the NMap for the beginners:
+
+# Commands for the NMap for the beginners:
 
 #### To find the ip add 
 
@@ -42,6 +43,33 @@ So don`t use this command.
 ` sudo nmap -sT -p21 < IP add >` 
 
 <img width="1141" height="868" alt="image" src="https://github.com/user-attachments/assets/9b210115-d245-49f9-912f-bcf0663bb53e" />
+
+> To discover the host addres ( yours addres ).
+
+```
+└─$ sudo netdiscover -i eth0                                 
+````
+
+<img width="1037" height="488" alt="Screenshot 2026-01-06 205846" src="https://github.com/user-attachments/assets/1493ad29-7dba-4a2e-915f-8d6f26e4bdfb" />
+
+> If you Know the how many ports are open in my host( you )/target addres.
+
+```
+nmap -sn < ip add >
+```
+
+<img width="1137" height="914" alt="image" src="https://github.com/user-attachments/assets/9d48b1fd-f805-4e29-93eb-d7f4c7cf3290" />
+
+
+> If you know the how may conntions to your networking ( router ) for limeted data you want.
+
+```
+nmap -sn < ip add >-100
+```
+Example:
+```
+nmap -sn 192.168.1.1-100
+```
 
 
 
